# Toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Core/include/: CoreMinimal.h  Defines.h  Delegate.h
Core/src/: CMakeLists.txt
Engine/include/: Game.h  Input.h  KGame.h
Engine/include/Components/: 2DRenderableComponent.h  K2DRenderableComponent.h
Engine/src/: CMakeLists.txt  Game.cpp  Input.cpp  KGame.cpp
Engine/src/Components/: 2DRenderableComponent.cpp  K2DRenderableComponent.cpp
Render/include/: KWindow.h  Utils.h  Window.h
Render/include/Renderables/: KShape2D.h  Shape2D.h
Render/src/: CMakeLists.txt  KWindow.cpp  Utils.cpp  Window.cpp  WindowGL.cpp  WindowGL.h
Render/src/Renderables/: KShape2D.cpp  Shape2D.cpp
Sandbox/: GenerateProjectFiles.bat  GenerateProjectFilesShell.sh  RunTests.bat
Sandbox/src/: CMakeLists.txt  main.cpp
Tests/src/: CMakeLists.txt
Toolkit/: CMakeLists.txt
Toolkit/content/shaders/: fragment.glsl  vertex.glsl
Toolkit/include/Core/: Application.h  CoreMinimal.h  Defines.h  Delegate.h  GLCallbacks.h  ImGuiWrapper.h  Input.h  Log.h  System.h  TKTypeTraits.h
Toolkit/include/Math/: Matrix.h  Transform.h  Vector.h
Toolkit/include/Rendering/: Material.h  Mesh.h  Shader.h  Texture.h  Utils.h  Window.h
Toolkit/src/: .clang-format  CMakeLists.txt
Toolkit/src/Core/: Application.cpp  GLCallbacks.cpp  ImGuiWrapper.cpp  Input.cpp  Log.cpp  System.cpp
Toolkit/src/Math/: Transform.cpp  Vector.cpp
Toolkit/src/Rendering/: Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Utils.cpp  Window.cpp
Toolkit/tests/: MathTests.cpp
